# NRE

./: .gitignore  .gitmodules  CITATION.cff  LICENSE  README.md  dependencies  pyproject.toml  requirements.txt  requirements_def.txt  requirements_manual.txt  test_working_example.py
nre/: __init__.py  analyze_cic_ids.py  analyze_nf_dataset.py  kalman_network_tools.py  network_connectivity.py  network_embedding.py  network_plotting.py  preprocess.py  real_time_model.py  safe_routing.py  signal_plotting.py  standardize.py  stream_data.py  validation_tools.py
nre/archive/: classification_tools_archive.py  network_naive_bayes.py  network_nb_archive.py  time_windowed_archive.py
nre/network_rendering/: archive.js  entity_network.js
nre/npeet/: __init__.py
nre/tests/: classification_experiment.ipynb  classification_experiment.py  classification_test.ipynb  compare_among_conn_params_experiment.py  draw_network.ipynb  embedding_train.ipynb  miscellaneous_plots.ipynb  safe_routing_sim.ipynb  test_classification_tools.py  test_expected_max.py  test_flow_based_classification.py  test_network_layout.ipynb  (+11 more)
src/: __init__.py  analyze_cic_ids.py  classification_tools.py  kalman_network_tools.py  network_connectivity.py  network_model.py  network_partitioning.py  network_plotting.py  preprocess.py  real_time_model.py  running_time.py  safe_routing.py  signal_plotting.py  stream_data.py
tests/: classification_experiment.py  classification_test.ipynb  compare_among_conn_params_experiment.py  kalman_pycharm.ipynb  miscellaneous_plots.ipynb  risks_over_time.ipynb  running_times.ipynb  stream_data.py  test_classification_tools.py  test_expected_max.py  test_flow_based_classification.py  test_network_layout.ipynb  test_network_model_graph.py  test_network_nb_mvn_fit.py  test_nre_classification.py  test_partitioning.ipynb  test_real_time_model.py  test_real_time_operation.py  test_risks_over_time.py  test_running_times.py  test_safe_routing.ipynb  test_stream_data.ipynb  test_validation.ipynb  test_validation.py  test_working_example.py
(+94 files in other folders)
