[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nre"
version = "0.0.1"
authors = [
  { name="Arda Bayer", email="bayerarda@gmail.com" },
]
description = "Network Risk Estimation"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/ab126/NRE.git"